syntax = "proto3";

package hoge.v1;

import "google/protobuf/timestamp.proto";

option go_package = "./hoge";

message Hoge {
    string id = 1;
    string name = 2;
    int32 number = 3;
    google.protobuf.Timestamp created_at = 4;
    google.protobuf.Timestamp updated_at = 5;
}

service HogeService {
    rpc Create (CreateRequest) returns (CreateResponse);
    rpc Fetch (FetchRequest) returns (FetchResponse);
    rpc FetchAll (FetchAllRequest) returns (FetchAllResponse);
    rpc Update (UpdateRequest) returns (UpdateResponse);
    rpc Delete (DeleteRequest) returns (DeleteResponse);
}

message CreateRequest {
    string name = 1;
    int32 number = 2;
}

message CreateResponse {
    Hoge hoge = 1;
}

message FetchRequest {
    string id = 1;
}

message FetchResponse {
    Hoge hoge = 1;
}

message FetchAllRequest {
}

message FetchAllResponse {
    repeated Hoge hoges = 1;
}

message UpdateRequest {
    string id = 1;
    string name = 2;
    int32 number = 3;
}

message UpdateResponse {
    Hoge hoge = 1;
}

message DeleteRequest {
    string id = 1;
}

message DeleteResponse {
    Hoge hoge = 1;
}